--- a/LambdaTimeline/Storyboards/Base.lproj/Main.storyboard
+++ b/LambdaTimeline/Storyboards/Base.lproj/Main.storyboard
@@ -155,7 +155,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="c6G-g5-Cbe">
-                                        <rect key="frame" x="16" y="440" width="266" height="30"/>
+                                        <rect key="frame" x="16" y="440" width="270" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Monochrome:" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="awO-Nz-zkD">
@@ -165,7 +165,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <slider opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="YzP-qz-Rgm">
-                                                <rect key="frame" x="134" y="0.0" width="134" height="31"/>
+                                                <rect key="frame" x="134" y="0.0" width="138" height="31"/>
                                                 <connections>
                                                     <action selector="changeMonochrome:" destination="1Aw-4e-BW2" eventType="valueChanged" id="OSz-pO-Xui"/>
                                                 </connections>
@@ -355,6 +355,9 @@
                         <barButtonItem key="rightBarButtonItem" title="Comment" id="xrT-JD-ey3">
                             <connections>
                                 <action selector="createComment:" destination="OyM-8q-Icp" id="2IY-cQ-DLq"/>
+                                <segue destination="Wky-oB-CuE" kind="popoverPresentation" popoverAnchorBarButtonItem="xrT-JD-ey3" id="U0W-No-tyw">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
